--- a/crm-project/package.json
+++ b/crm-project/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.778.0",
     "babel-watch": "^7.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -20,7 +21,10 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^5.10.9"
+    "mongoose": "^5.10.9",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
