--- a/buho/samyang/package.json
+++ b/buho/samyang/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "json-server": "json-server --watch db.json --port 5000",
+    "dev": "concurrently \"npm start\" \"json-server --watch db.json --port 5000\"",
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +23,9 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "babel-polyfill": "^6.26.0",
+    "concurrently": "^5.3.0",
+    "json-server": "^0.16.2",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
@@ -28,10 +33,21 @@
   "dependencies": {
     "css-loader": "^4.3.0",
     "dotenv-webpack": "^4.0.0",
+    "file-loader": "^6.1.1",
+    "image-webpack-loader": "^7.0.1",
+    "imagemin-svgo": "^8.0.0",
+    "materialize-css": "^1.0.0",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-datepicker": "^3.2.2",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "style-loader": "^1.3.0"
-  }
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "style-loader": "^1.3.0",
+    "styled-components": "^5.2.0"
+  },
+  "proxy": "http://localhost:5000"
 }
