--- a/leejun/samyang/package.json
+++ b/leejun/samyang/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --mode production",
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -29,10 +30,12 @@
     "axios": "^0.20.0",
     "css-loader": "^4.3.0",
     "dotenv-webpack": "^3.0.0",
+    "file-loader": "^6.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "style-loader": "^1.3.0",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "url-loader": "^4.1.1"
   }
 }
