--- a/buho/samyang/package.json
+++ b/buho/samyang/package.json
@@ -33,7 +33,7 @@
   "dependencies": {
     "css-loader": "^4.3.0",
     "dotenv-webpack": "^4.0.0",
-    "file-loader": "^6.1.1",
+    "file-loader": "^6.2.0",
     "image-webpack-loader": "^7.0.1",
     "imagemin-svgo": "^8.0.0",
     "materialize-css": "^1.0.0",
@@ -47,7 +47,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "style-loader": "^1.3.0",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "url-loader": "^4.1.1"
   },
   "proxy": "http://localhost:5000"
 }
