--- a/buho/samyang/package.json
+++ b/buho/samyang/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "json-server": "json-server --watch db.json --port 5000",
     "dev": "concurrently \"npm start\" \"json-server --watch db.json --port 5000\"",
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "start": "webpack serve --config ./webpack.config.js --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -27,7 +27,6 @@
     "concurrently": "^5.3.0",
     "json-server": "^0.16.2",
     "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
@@ -46,9 +45,11 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "rm": "^0.1.8",
     "style-loader": "^1.3.0",
     "styled-components": "^5.2.0",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "webpack-cli": "^4.2.0"
   },
   "proxy": "http://localhost:5000"
 }
