--- a/buho/samyang/package.json
+++ b/buho/samyang/package.json
@@ -22,6 +22,7 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
+    "@webpack-cli/serve": "^1.1.0",
     "babel-loader": "^8.1.0",
     "babel-polyfill": "^6.26.0",
     "concurrently": "^5.3.0",
